# utac-gym

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  example.py  example_gym.py  pyproject.toml
.github/workflows/: build_wheels.yml
src/utac/: __init__.py  game.py  utils.py
src/utac/core/: __init__.py  game.py  types.py
src/utac/envs/: __init__.py  utacenv.py  utils.py
src/utac/envs/wrappers/: info_wrapper.py
src/utac/wrappers/: __init__.py  play_opponent_wrapper.py
src/utac_gym/: __init__.py
src/utac_gym/_core/: main_module.cpp  state.cpp  types.cpp
src/utac_gym/core/: __init__.py  game.py  gamestate.py  types.py
src/utac_gym/envs/: __init__.py  utacenv.py  utils.py
src/utac_gym/wrappers/: __init__.py  play_opponent_wrapper.py
