[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "utac"
version = "0.1.0"
description = "Ultimate Tic Tac Toe"
authors = ["Nathanael Lu <info@lunathanael.dev>"]
readme = "README.md"
packages = [{include = "utac"}]

[tool.poetry.dependencies]
python = "^3.8"
