[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utac"
version = "1.4.1"
dependencies = [
    "gymnasium>=1.0.0,<2.0.0",
]
requires-python = ">=3.8"
authors = [
    {name = "Nathanael Lu", email = "info@lunathanael.dev"}
]
maintainers = [
  {name = "Nathanael Lu", email = "info@lunathanael.dev"}
]
description = "A Python implementation of Ultimate Tic Tac Toe, a strategic variant of the classic game."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["utac", "ultimate tic tac toe"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]