[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "utac-gym"
version = "2.4.3"
dependencies = [
    "gymnasium>=1.0.0,<2.0.0",
    "nanobind>=2.1.0,<3.0.0",
]
requires-python = ">=3.10"
authors = [
    {name = "Nathanael Lu", email = "info@lunathanael.dev"}
]
maintainers = [
  {name = "Nathanael Lu", email = "info@lunathanael.dev"}
]
description = "A Python implementation of Ultimate Tic Tac Toe, a strategic variant of the classic game."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["utac", "ultimate tic tac toe"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2,<6.0.0",
    "build>=1.2.1,<2.0.0",
    "packaging>=24.1,<25.0",
    "typing-extensions>=4.12.2,<5.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

wheel.packages = ["src/utac_gym"]
wheel.install-dir = "utac_gym"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"
manylinux-ppc64le-image = "quay.io/pypa/manylinux_2_28_ppc64le:latest"
manylinux-s390x-image = "quay.io/pypa/manylinux_2_28_s390x:latest"
manylinux-pypy_x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"
manylinux-pypy_aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"

musllinux-x86_64-image = "quay.io/pypa/musllinux_1_2_x86_64:latest"
musllinux-i686-image = "quay.io/pypa/musllinux_1_2_i686:latest"
musllinux-aarch64-image = "quay.io/pypa/musllinux_1_2_aarch64:latest"
musllinux-ppc64le-image = "quay.io/pypa/musllinux_1_2_ppc64le:latest"
musllinux-s390x-image = "quay.io/pypa/musllinux_1_2_s390x:latest"

# skip incompatible many_linux images, GCC<12
skip = [
    "*_i686",
]
